app/assets/stylesheets/elements.css.scss
@import "colors";

img {
  border: 0;
  border-width: 0;
}

a {
  text-decoration: underline;
}

a:link,
a:visited {
  color: $primary-link-color;
}

a:hover,
a:active {
  text-decoration: none;
  color: $secondary-link-color;
  background: $secondary-background-color;
}

table
{
  font-size: 1em;
  background: #fff;
  width: 100%;
  border-collapse: collapse;
  text-align: left;
}
table th
{
  font-weight: normal;
  color: $secondary-text-color;
  padding: 0.8em 0.4em 0.2em 0.4em;
  border-bottom: 1px solid $subdued-color;
}
table td
{
  color: $primary-text-color;
  border-bottom: 1px solid $fieldset-color;
  padding: 0.6em 0.4em;
}
table tbody tr:hover td
{
  color: #009;
}

